# setpicV3.3

./: CMakeLists.txt  README.md
cmake/: xsetpic.detectboost.library.cmake  xsetpic.detectcxxcompiler.cmake  xsetpic.detectgtk.library.cmake  xsetpic.detectlua.library.cmake  xsetpic.detectopencv.library.cmake  xsetpic.findpkgconfig.tool.cmake  xsetpic.findpkgconfig.tool.private.cmake  xsetpic.utils.cmake
modules/: CMakeLists.txt
modules/algorithm/: CMakeLists.txt  linesf.h
modules/algorithm/include/: BrightnessEqualizer.h  LinearSpaceCorrect.h  PartitionColorCorrect.h
modules/camera/: CMakeLists.txt
modules/camera/include/: ebuscam.h
modules/camera/src/: ebuscam.cpp_bk  ebuscamera.cpp
modules/global/: global.h
modules/global/include/: func.h  typedef.h
modules/script/: CMakeLists.txt
modules/script/include/: lscript.h
modules/script/script/: genicam.lua
modules/script/src/: lscript.cpp
modules/setpic/: CMakeLists.txt
modules/setpic/include/: callback.h  modbusnet.h  parameter.h  rtmemory.h  server.h  setpic.h
modules/setpic/scripts/: SetPic  camera.lua  camera.luac  set_puregev_env  set_socket_buffer_size.sh
modules/setpic/src/: callback.cpp  modbusnet.cpp  parameter.cpp  rtmemory.cpp  server.cpp  setpic.cpp
modules/vcamera/: CMakeLists.txt  compile.sh
modules/vcamera/include/: vcamera.h
modules/vcamera/src/: vcamera.cpp
modules/vcamgetpic/: CMakeLists.txt
modules/vcamgetpic/include/: getpic.h
modules/vcamgetpic/src/: compile.sh  getpic.cpp  test_getpic  test_getpic.cpp
test/: CMakeLists.txt
test/test_camera/: CMakeLists.txt  compile.sh
test/test_camera/src/: start.cpp
test/test_script/: CMakeLists.txt
test/test_script/src/: test_script.cpp
test/test_setpic/: CMakeLists.txt
test/test_setpic/include/: start.h
test/test_setpic/src/: start.cpp
